[gd_scene load_steps=6 format=3 uid="uid://b4kl8m7n2qaqr"]

[ext_resource type="Script" path="res://CombatUI/PlayerActionUI.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://c2lifwin6gapf" path="res://CombatUI/combatui_background.svg" id="2"]
[ext_resource type="Texture2D" uid="uid://d0u33ghx2u0lt" path="res://CombatUI/button_red.svg" id="3"]
[ext_resource type="Texture2D" uid="uid://builf00x4kdy0" path="res://CombatUI/button_green.svg" id="4"]
[ext_resource type="Texture2D" uid="uid://bqk34qblntxbw" path="res://CombatUI/button_yellow.svg" id="5"]

[node name="PlayerActionUI" type="CanvasLayer"]
script = ExtResource("1")

[node name="ActionWindow" type="Panel" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = -20.0

[node name="Background" type="TextureRect" parent="ActionWindow"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2")
stretch_mode = 1

[node name="ActionLabel" type="Label" parent="ActionWindow"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 35.0
grow_horizontal = 2
text = "PLAYER ACTIONS"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="ActionWindow"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -25.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = 25.0
grow_horizontal = 0
text = "X"

[node name="GridContainer" type="GridContainer" parent="ActionWindow"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 40.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
columns = 8

[node name="AttackButton" type="TextureButton" parent="ActionWindow/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("3")

[node name="AttackLabel" type="Label" parent="ActionWindow/GridContainer/AttackButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "ATTACK"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MoveButton" type="TextureButton" parent="ActionWindow/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("4")

[node name="MoveLabel" type="Label" parent="ActionWindow/GridContainer/MoveButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "MOVE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SkillButton" type="TextureButton" parent="ActionWindow/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("5")

[node name="SkillLabel" type="Label" parent="ActionWindow/GridContainer/SkillButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "SKILL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HPLabel" type="Label" parent="ActionWindow/GridContainer"]
layout_mode = 2
text = "HP: --/--"
horizontal_alignment = 1
vertical_alignment = 1

[node name="APLabel" type="Label" parent="ActionWindow/GridContainer"]
layout_mode = 2
text = "AP: --/--"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EmptySlot1" type="Control" parent="ActionWindow/GridContainer"]
layout_mode = 2

[node name="EndTurnButton" type="TextureButton" parent="ActionWindow/GridContainer"]
layout_mode = 2
modulate = Color(0.7, 0.7, 0.7, 1)
texture_normal = ExtResource("3")

[node name="EndTurnLabel" type="Label" parent="ActionWindow/GridContainer/EndTurnButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "END
TURN"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="ActionWindow/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="ActionWindow/GridContainer/EndTurnButton" to="." method="_on_end_turn_button_pressed"]
